Remove unused public, specifiy correct path

--- a/smb.conf
+++ b/smb.conf
@@ -19,20 +19,7 @@
 
 [home]
         comment = Home Directories
-        path = /home
-        public = yes
-        guest ok = yes
-        read only = no
-        writeable = yes
-        create mask = 0777
-        directory mask = 0777
-        browsable = yes
-        printable = no
-        oplocks = yes
-
-[public]
-        comment = Public WWW Directory
-        path = /var/www/html
+        path = /home/isbackups
         public = yes
         guest ok = yes
         read only = no
