Only guest config

--- a/smb.conf
+++ b/smb.conf
@@ -3,7 +3,7 @@
         log file = /var/log/samba/samba.log
         security = user
         map to guest = bad user
-        guest account = samba
+        guest account = nobody
         hosts allow = *
         printcap name = /etc/printcap
         hide dot files = yes
@@ -19,7 +19,7 @@
 
 [home]
         comment = Home Directories
-        path = /home/isbackups
+        path = /home
         public = yes
         guest ok = yes
         read only = no
