only samba user

--- a/smb.conf
+++ b/smb.conf
@@ -3,7 +3,7 @@
         log file = /var/log/samba/samba.log
         security = user
         map to guest = bad user
-        guest account = nobody
+        guest account = samba
         hosts allow = *
         printcap name = /etc/printcap
         hide dot files = yes
@@ -18,14 +18,10 @@
         socket options = TCP_NODELAY SO_KEEPALIVE SO_RCVBUF=17520 SO_SNDBUF=17520 IPTOS_LOWDELAY
 
 [home]
-        comment = Home Directories
         path = /home
-        public = yes
         guest ok = yes
+        guest only = yes
         read only = no
         writeable = yes
-        create mask = 0777
-        directory mask = 0777
         browsable = yes
-        printable = no
-        oplocks = yes
+        public = yes
